# DrawAI

./: .gitignore  CHANGELOG.md  README-en.md  README.md  pyproject.toml
apps/workbench/: index.html  package-lock.json  package.json  vite.config.ts
configs/drawai/: config.yaml  config_fast_poster.yaml  harbor_smoke_2048.yaml
docs/: promo_svg_layer_animation_workflow.md  run1_iterative_refine_prompt_draft.md
docs/zh-CN/: runtime-options.md  windows-native-deployment.md
scripts/: assets_visualization.py  bootstrap_drawai_local_runtime.sh  build_assemble_debug_report.py  build_drawai_run_comparison.py  build_editability_paper_figure.py  build_element_distribution_map.py  build_scheme_a_overview_figure.py  download_drawai_local_models.sh  ensure_local_codex_gateway.py  run_codex_element_analysis.py  run_codex_python_sdk_imagegen.py  run_codex_python_sdk_svg_stage.py  run_drawai_experiment.py  run_drawai_explainer_frontend.py  run_drawai_workbench_frontend.sh  run_ppt_template_gallery_category_sample.py  start_drawai_workbench_local.sh
src/drawai/: README.md  __init__.py  acp_agent.py  agent_cli_svg.py  artifacts.py  asset_geometry.py  asset_manifest_utils.py  asset_materialization.py  asset_policy.py  asset_selection_loop.py  cli.py  codex_cli.py  codex_python_sdk_imagegen.py  codex_python_sdk_svg.py  codex_svg_tool_loop.py  config.py  device_profiles.py  experiment_artifacts.py  explainer_app.py  (+29 more)
tests/: __init__.py  conftest.py  test_demo_assets.py  test_drawai_project_naming.py  test_page_spec.py  test_pptx_inspector.py  test_semantic_ppt_svg_to_ppt.py
(+160 files in other folders)
